[gd_scene load_steps=3 format=3 uid="uid://bfskk4kagkjnd"]

[ext_resource type="Script" path="res://src/gui/main_menu.gd" id="1_4djdb"]
[ext_resource type="PackedScene" uid="uid://dq8wkquhigvch" path="res://src/gui/settings_menu.tscn" id="1_cmkqd"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_4djdb")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 62
text = "Game Title"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 80

[node name="StartButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "Start Game"

[node name="SettingsButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "Settings"

[node name="QuitButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("1_cmkqd")]
visible = false

[connection signal="toggled" from="Menu/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_toggled"]
